--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <div class="full">
-            <h1>FULL STACK DEVELOPER.</h1>
-            <h2>I CAN DO ALMOST ANYTHING</h2>
-        </div>
-        <div>
-            <h3>HEY, eu so o Bernardo. Prazer em te conhecer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque, nisl ut vehicula gravida, nulla arcu elementum elit, ac vestibulum elit metus a elit. Integer ac sem sapien. Aenean sed mi non urna dignissim malesuada. Donec faucibus eros at augue fringilla, sed pellentesque tellus interdum. Suspendisse malesuada nibh vitae enim lacinia, at sollicitudin lectus varius. Sed pharetra nunc euismod, commodo purus a, dignissim ipsum.</p>
-        </div>
-    </header>
-
+        
+        <h1>FULL STACK DEVELOPER.</h1>
+        <h2>I CAN DO ALMOST ANYTHING</h2>
+        <img src="image/programador.png" alt="icon programador" class="prog"> 
+        <h3>HEY, eu so o Bernardo. Prazer em te conhecer</h3>
+        <p>Lorem ipsum elit. Nullam scelerisque, nisl ut vehicula gravida, nulla arcu elementum elit, ac vestibulum elit metus a elit. . Sed pharetra nunc euismod, commodo purus a, dignissim ipsum.</p>
+    </header>    
     <!-- cartoes  -->
-    <section class="cartoes">
+    <div class="cartoes">
         <div class="cartao">
             <img src="image/design.png" alt="icon design">
             <p>Front end</p>
@@ -32,14 +30,15 @@
             <img src="image/responsivo.png" alt="icon responsivo">
             <p>Mentor</p>
         </div>
-    </section>
+    </div>  
+    <div class="projeto">
+        <img src="image/isla.png" class="img">
+        <p class="title_proj"><strong>ISLA</strong></p>
+        <p class="txt">Lorem ipsum elit. Nullam scelerisque, nisl ut vehicula gravida, nulla arcu elementum elit, ac vestibulum elit metus a elit. . Sed pharetra nunc euismod, commodo purus a, dignissim ipsum.</p>
+    </div>
 
-    <section class="projetos">
-        <div class="projeto">
-            <img src="image/isla.png" alt="imagem do site do isla">
-            <h2>SITE ISLA SANTAREM</h2>
-            <P>Site da universidade de Santarem chamada isla</P>
-        </div>
-    </section>
+    <footer>
+        <p>Copyright Bernardo. Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
