--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <footer>
-        <p>Copyright Bernardo. Todos os direitos reservados</p>
+        <p>&copy;opyright Bernardo. Todos os direitos reservados</p>
     </footer>
 </body>
 </html>
