--- a/index.html
+++ b/index.html
@@ -9,36 +9,59 @@
 </head>
 <body>
     <header>
-        
-        <h1>FULL STACK DEVELOPER.</h1>
-        <h2>I CAN DO ALMOST ANYTHING</h2>
-        <img src="image/programador.png" alt="icon programador" class="prog"> 
-        <h3>HEY, eu so o Bernardo. Prazer em te conhecer</h3>
-        <p>Lorem ipsum elit. Nullam scelerisque, nisl ut vehicula gravida, nulla arcu elementum elit, ac vestibulum elit metus a elit. . Sed pharetra nunc euismod, commodo purus a, dignissim ipsum.</p>
+      <div class="texto_logo"><h1>FULL STACK DEVELOPER.</h1></div>
+        <img class="logo" src="image/programador.png"></img>
+        <div class="texto_logo">
+            <h3>HEY, eu so o Bernardo. Prazer em te conhecer</h3>
+        </div>
+        <div>
+            <p>Este é um Portfolio feito na aula de multimedia, espero que goste</p>
+        </div>  
     </header>    
     <!-- cartoes  -->
-    <div class="cartoes">
-        <div class="cartao">
-            <img src="image/design.png" alt="icon design">
-            <p>Front end</p>
+    <div class="card-container">
+        <div class="card">
+            <img src="image/design.png" alt="Descrição da imagem 1">
+            <p><strong>FrontEnd.</strong></p>
         </div>
-        <div class="cartao">
-            <img src="image/codigo.png" alt="icon codigo">
-            <p>Back end</p>
+        <div class="card">
+            <img src="image/codigo.png" alt="Descrição da imagem 2">
+            <p><strong>BackEnd.</strong></p>
         </div>
-        <div class="cartao">
-            <img src="image/responsivo.png" alt="icon responsivo">
-            <p>Mentor</p>
+        <div class="card">
+            <img src="image/responsivo.png" alt="Descrição da imagem 3">
+            <p><strong>Mentor.</strong></p>
         </div>
-    </div>  
-    <div class="projeto">
-        <img src="image/isla.png" class="img">
-        <p class="title_proj"><strong>ISLA</strong></p>
-        <p class="txt">Lorem ipsum elit. Nullam scelerisque, nisl ut vehicula gravida, nulla arcu elementum elit, ac vestibulum elit metus a elit. . Sed pharetra nunc euismod, commodo purus a, dignissim ipsum.</p>
     </div>
-
-    <footer>
-        <p>&copy;opyright Bernardo. Todos os direitos reservados</p>
-    </footer>
+    <!--projetos-->
+    <div class="title">
+      <h1>Projetos</h1>
+    </div>
+    <div class="card-list">
+        <div class="card">
+          <img src="image/isla.png" alt="Descrição da imagem 1">
+          <div class="text">
+            <h2><strong>ISLA-Santarem</strong></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed nibh sit amet velit elementum eleifend. Praesent sed suscipit mauris. Pellentesque in lorem id odio lacinia auctor. Nullam in neque sed nisl rhoncus auctor non sed nisi. Donec varius mi et lacus commodo vulputate. Duis dictum gravida diam quis bibendum. </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="image/tesla.png" alt="Descrição da imagem 2">
+          <div class="text">
+            <h2><strong>Tesla</strong></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed nibh sit amet velit elementum eleifend. Praesent sed suscipit mauris. Pellentesque in lorem id odio lacinia auctor. Nullam in neque sed nisl rhoncus auctor non sed nisi. Donec varius mi et lacus commodo vulputate. Duis dictum gravida diam quis bibendum. </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="image/netflix.png" alt="Descrição da imagem 3">
+          <div class="text">
+            <h2><strong>Netflix</strong></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed nibh sit amet velit elementum eleifend. Praesent sed suscipit mauris. Pellentesque in lorem id odio lacinia auctor. Nullam in neque sed nisl rhoncus auctor non sed nisi. Donec varius mi et lacus commodo vulputate. Duis dictum gravida diam quis bibendum. </p>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <p>&copy; 2023 Todos os direitos reservados.</p>
+      </footer>
 </body>
 </html>
